# project-cph

./: .clinerules  .coverage  .coverage.cphelper.111820.XapdKiIx  .coverage.cphelper.172616.XhkjISNx  .coverage.cphelper.273526.XJeBjwXx  .coverage.cphelper.279964.XqUuURDx  .coverage.cphelper.372269.XLpqlXnx  .coverage.cphelper.390189.XUEjnjyx  .coverage.cphelper.399951.XgHncuKx  .coverage.cphelper.428503.XCxwKOJx  .coverage.cphelper.472221.XGZsjFUx  .coverage.cphelper.487540.XzYheLZx  .coverage.cphelper.504891.XgUhOTkx  .cursorignore  .cursorrules  .functional_quality_config.yaml  .gitignore  .pre-commit-config.yaml  .rollback_20250625_111432.json  .rollback_20250625_111442.json  .rollback_20250625_111445.json  .rollback_20250625_111651.json  .ruff_custom_rules.py  .vulture_whitelist.py  01_code_quality_issues.md  01_sqlite_persistence_failures.md  02_default_value_violations.md  02_fixture_configuration_failures.md  02_type_error_failures.md  03_persistence_repository_errors.md  03_test_execution_failures.md  03_workflow_failures.md  04_integration_test_failures.md  04_workflow_execution_failures.md  05_other_functionality_failures.md  20250111160500_container_extension.md  202506281157_残タスク.md  ARCHITECTURE_DESIGN_EVALUATION.md  CLAUDE.md  CLAUDE_md_violations_report.md  (+220 more)
.cargo/: config.toml
.temp/: main.py  main.rs
__contest_current/: docker_operator.py
__oldtests/: conftest.py  test_conftest_fixtures.py  test_shell_utils.py  test_sqlite_manager.py
agent/: commit.do  diff-review.do  feature.do  fix-errors.do  refactor.do  refactor1.do  refactor2.do  result.do  review.do  test.do
analyze/: OPERATIONS_WORKFLOW_IMPROVEMENT_PLAN.md  __init__.md  separation_of_concerns_analysis.md
backup_reorganize_20250625_142046/: api_handler.py  backup_info.json
backup_reorganize_20250625_142055/: backup_info.json  config.py  database.py  logger.py  main.py
benches/: benchmarks.rs
cline_agent/: 0001_contest_refactor_plan.md
compile/rust/: Cargo.toml
compile/rust/src/: lib.rs
config/: docker.toml  runner.yaml
contest_current/: config.json  info.json
contest_env/: base.py  oj.Dockerfile  pypy.Dockerfile  pypy_7_3_config.py  pypy_7_3_env.py  pypy_config.py  python.Dockerfile  python_3_8.Dockerfile  python_3_8_config.py  python_3_8_env.py  python_config.py  rust.Dockerfile  rust_1_70_config.py  rust_1_70_env.py  rust_config.py
coverage/: tarpaulin-report.html
cursor_agent/: 0001_config_refactor.md  0001_config_refactor_complete.md  0002_config_improvement.md  0002_config_improvement_complete.md  0003_alias_section_automation.md  0004_compile_error_fix.md  0005_config_parse_fix.md  0006_config_validation.md  0009_config_load_migration.md  0010_contest_config_reuse.md  0011_contest_template_copy.md  0012_site_to_config_migration.md  0013_command_parse_migration.md  0014_contest_responsibility.md  0015_contest_responsibility_reconsider.md  0016_contest_error_temporary_fix.md  0016_contest_refactor_plan.md  0017_command_error_fix.md  0017_contest_config_integration.md  0018_contest_default_removal.md  0018_remaining_warnings_fix.md  0019_contest_config_organization.md  0019_contest_error_removal.md  0019_final_warning_fix.md  0020_config_refactor.md  0021_contest_auto_restore.md  0021_workspace_dir_removal.md  0022_config_get_method.md  0023_contest_command_parse.md  0024_command_parse_implementation.md  0026_command_parse_implementation.md  0026_test_reconstruction.md  0027_command_pattern_restructure.md  0028_config_system_analysis.md  0029_contest_command_implementation.md  0030_crate_selection.md  0031_implementation_concerns.md  0032_error_handling_concerns.md  0033_contest_mod_analysis.md  0034_contest_mod_improvement.md  (+22 more)
develop_tools/: analyze_coverage.py  analyze_critical_coverage.py  analyze_imports.py  analyze_unused_files.py  architectural_recommendations.py  complexity_analysis.py  comprehensive_dependency_analyzer.py  debug_test_step.py  detailed_dependency_analyzer.py  enhanced_import_analyzer.py
docs/: configuration.md  development.md  fallback_analysis_report.md  installation.md  usage.md  user-workflows.md  壊れたインポート探索ロジック改善提案.md  壊れたインポート自動修正ツール実装状況.md  要件定義書v1.md
examples/: complete_workflow_execution_demo.py  fitting_concept_demo.py  fitting_workflow_integration.py  graph_based_workflow_example.py  logging_di_usage.py  operations_dependency_check.py  parallel_execution_demo.py  pure_workflow_concept.py  pure_workflow_demo.py  result_passing_design.py  result_substitution_demo.py  simple_workflow_execution_demo.py  unified_factory_demo.py
fallback/: 00_overview.md  01_docker_fallbacks.md  02_logging_fallbacks.md  03_filesystem_fallbacks.md  04_python_utils_fallbacks.md  05_patterns_fallbacks.md
old_src/: __init__.py  main.py  orchestration_manager.py  user_input_parser.py
old_src_check/: .src_check_kpi.yaml.example  KPI_README.md  Rust移行時に必要な品質チェック.md  check_dependencies.py  dependency_graph.dot  generate_dependency_graph.py  import_resolver.py  main.py  readme.md
scripts/: analyze_architecture.py  architecture_quality_check.py  broken_import_fixer.py  check_circular_imports.py  check_clean_architecture.py  check_dependencies.py  check_generic_names.py  check_monkeypatch_usage.py  e2e.py  functional_quality_check.py  practical_quality_check.py  practical_quality_config.py  run_import_fixer.sh  run_src_check.sh  test.py
src/: __init__.py  cli.rs  command_executor.py  command_login.py  command_open.py  command_parser.py  command_submit.py  command_test.py  commands.py  config_json_manager.py  contest_file_manager.py  docker.rs  docker_operator.py  env_context.py  error.rs  file_operator.py  info_json_manager.py  input_data_loader.py  language_runner.py  lib.rs  logger.py  main.py  main.rs  moveignore_manager.py  opener.py  orchestration_manager.py  podman_operator.py  project_path_manager.py  runners.rs  shell_process.py  submit_file_constants.py  test.rs  test_environment.py  test_result_formatter.py  test_result_parser.py  timer.py  unified_path_manager.py  workflow_execution_service.py  workspace.rs  クリーンアーキテクチャ評価.md
src_check/: README.md  (+19 more)
(+3469 files in other folders)
