[package]
name = "cph"
version = "0.1.0"
edition = "2021"
authors = ["sugipamo"]
license = "MIT"
description = "競技プログラミングの問題を解くためのCLIツール"
repository = "https://github.com/sugipamo/project-cph"
readme = "README.md"
keywords = ["competitive-programming", "cli", "atcoder", "contest", "helper"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "cph"
path = "src/bin/cph.rs"

[features]
default = []
testing = []

[dependencies]
clap = { version = "4.4.6", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
open = "5.0.0"
anyhow = "1.0"
once_cell = "1.19"
tempfile = "3.2"
rpassword = "7.3"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"
colored = "2.0"
proconio = "0.4"
async-trait = "0.1"
futures = "0.3"
tar = "0.4"
uuid = { version = "1.0", features = ["v4"] }
users = "0.11"
regex = "1.10.2"
itertools = "0.11"
fs_extra = "1.3"
libc = "0.2"
nix = { version = "0.27", features = ["user", "fs"] }
mockall = "0.12.1"
petgraph = "0.6"
containerd-client = "0.7.0"
yaml-rust = "0.4"
bytes = { version = "1.5", features = ["serde"] }
tonic = { version = "0.12", features = ["transport"] }
serde_bytes = "0.11"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
tempfile = "3.8"
tokio-test = "0.4"
mockall = "0.12.1"
wiremock = "0.5"
serde_json = "1.0"

[lib]
name = "cph"
path = "src/lib.rs"
