[package]
name = "cph"
version = "0.1.0"
edition = "2021"
authors = ["CPH Team"]
description = "Competitive Programming Helper"
repository = "https://github.com/yourusername/cph"
license = "MIT"
readme = "README.md"
keywords = ["competitive-programming", "helper", "cli", "testing", "automation"]
categories = ["command-line-utilities", "development-tools"]

[lib]
name = "cph"
path = "src/lib.rs"

[[bin]]
name = "cph"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1.40", features = ["full"] }
async-trait = "0.1"

# CLI parser
clap = { version = "4.5", features = ["derive", "env"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "migrate"] }

# Docker API
bollard = "0.17"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Configuration
config = "0.14"

# File system
tempfile = "3.12"
walkdir = "2.5"

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.10", features = ["v4", "serde"] }
regex = "1.10"
once_cell = "1.19"

[dev-dependencies]
# Testing
mockall = "0.12"
pretty_assertions = "1.4"
test-case = "3.3"
assert_fs = "1.1"
predicates = "3.1"
insta = "1.39"

# Benchmarking
criterion = { version = "0.5", features = ["html_reports"] }

# Property-based testing
proptest = "1.4"

[[bench]]
name = "benchmarks"
harness = false

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.test]
opt-level = 0
debug = true

[profile.bench]
opt-level = 3
lto = true
codegen-units = 1
